--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,72 @@
-# Student Services Platform - Enhanced Production Requirements
+# Student Services Platform - Updated Requirements
 # Core web framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi>=0.104.1,<0.110.0
+uvicorn[standard]>=0.24.0,<0.30.0
 
 # Database
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-alembic==1.13.1
+sqlalchemy>=2.0.23,<2.1.0
+psycopg2-binary>=2.9.9
+alembic>=1.13.1,<2.0.0
 
 # Telegram Bot
-aiogram==3.2.0
+aiogram>=3.2.0,<4.0.0
 
 # Data validation
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic>=2.5.0,<3.0.0
+pydantic-settings>=2.1.0,<3.0.0
 
 # Authentication and Security
-passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.3.0
-python-multipart==0.0.6
+passlib[bcrypt]>=1.7.4
+python-jose[cryptography]>=3.3.0
+python-multipart>=0.0.6
 
 # Payment processing
-stripe==7.8.0
+stripe>=7.8.0,<8.0.0
 
 # Environment and configuration
-python-dotenv==1.0.0
-python-decouple==3.8
+python-dotenv>=1.0.0
+python-decouple>=3.8
 
 # Web templates and static files
-jinja2==3.1.2
-aiofiles==23.2.1
+jinja2>=3.1.2
+aiofiles>=23.2.1
 
 # HTTP requests
-requests==2.31.0
-httpx==0.25.2
+requests>=2.31.0
+httpx>=0.25.2
 
 # Date and time
-python-dateutil==2.8.2
+python-dateutil>=2.8.2
 
 # File handling
-pillow==10.1.0
+pillow>=10.1.0
 
 # Logging and monitoring
-structlog==23.2.0
+structlog>=23.2.0
 
-# Email (optional)
-aiosmtplib==3.0.1
-email-validator==2.1.0
+# Email (optional )
+aiosmtplib>=3.0.1
+email-validator>=2.1.0
 
 # Development tools (optional)
-pytest==7.4.4
-pytest-asyncio==0.21.1
-black==23.12.0
-isort==5.13.2
-flake8==6.1.0
+pytest>=7.4.4
+pytest-asyncio>=0.21.1
+black>=23.12.0
+isort>=5.13.2
+flake8>=6.1.0
 
 # Production server
-gunicorn==21.2.0
+gunicorn>=21.2.0
 
 # Caching (optional)
-redis==5.0.1
-aioredis==2.0.1
+redis>=5.0.1
+aioredis>=2.0.1
 
 # Utilities
-click==8.1.7
-rich==13.7.0
-typer==0.9.0
+click>=8.1.7
+rich>=13.7.0
+typer>=0.9.0
 
-# Additional security
-cryptography==41.0.8
-bcrypt==4.1.2
+# Security - use latest compatible version
+cryptography>=41.0.0
+bcrypt>=4.1.0
